--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 	<head>
 		<meta charset="UTF-8">
-		<title>Barbearia Alura</title>
+		<title>Parque de diversão Alura</title>
 		<link rel="stylesheet" href="style.css">
 	</head>
 
@@ -12,11 +12,11 @@
 		</header>
 		<img id="banner" src="banner.jpg">
 		<div class="principal">
-			<h2 class="titulo-centralizado">Sobre a Barbearia Alura</h2>
+			<h2 class="titulo-centralizado">Sobre a Parque de diversão Alura</h2>
 	 
-			<p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+			<p>Localizada um pouco afastado do cidade a <strong>Parque de diversão Alura</strong> Traz para os melhores brinquedos da região. Fundada em 2022,o parque de diversão Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes"</strong>.</em></p>
+			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar uma experiencia inesquecivel que os clientes vão"</strong>.</em></p>
 
 			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
 		</div>
