--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
 	 
 			<p>Localizada um pouco afastado do cidade a <strong>Parque de diversão Alura</strong> Traz para os melhores brinquedos da região. Fundada em 2022,o parque de diversão Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
-			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar uma experiencia inesquecivel que os clientes vão"</strong>.</em></p>
+			<p id="missao"><em>Nossa missão é: <strong>"Proporcionar uma experiencia inesquecivel que os clientes não vão esquecer"</strong>.</em></p>
 
-			<p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
+			<p>Oferecemos segurança em todos os brinquedos, comidas em varios pontos do parque, e também um ponto de socorro caso alguem se machuque .</p>
 		</div>
 
 		<div class="beneficios">
