--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<header>
 			<h1 class="titulo-principal">Parque de diversão Alura</h1>
 		</header>
-		<img id="banner" src="banner.jpg">
+		<img id="banner" src="parquediverso-600x384-af909dd0.jpg">
 		<div class="principal">
 			<h2 class="titulo-centralizado">Sobre a Parque de diversão Alura</h2>
 	 
@@ -31,7 +31,7 @@
 				<li class="itens">Brinquedos perigosos</li>
 			</ul>
 
-			<img src="beneficios.jpg" class="imagembeneficios">
+			<img src="PIM_Brinquedo_01.jpg" class="imagembeneficios">
 		</div>
 	</body>
 </html>
